# yolo_staple_ros

./: CMakeLists.txt  README.md  package.xml
App/: tracker_yolo.cpp  video_publisher_node.cpp  yolo_staple_node.cpp
include/: staple_tracker.hpp
src/: staple_tracker.cpp
